--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -5,6 +5,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 20px;
+  margin: 0 -5px;
   width: 100%;
   background: $light-background;
   box-shadow: $box-shadow;
@@ -13,6 +14,8 @@
 
 .card {
   display: flex;
+  flex: 1 1 0;
+  margin: 0 5px;
   flex-direction: column;
   background: $secondary-color;
 
@@ -86,4 +89,9 @@
 
 .tabs__wrapper {
   display: flex;
+}
+
+.link {
+  color: inherit;
+  text-decoration: none;
 }
