--- a/src/pages/Home/components/ThisDay/ThisDay.module.scss
+++ b/src/pages/Home/components/ThisDay/ThisDay.module.scss
@@ -7,6 +7,7 @@
   // background-color: $light-background;
   box-shadow: $box-shadow;
   border-radius: $border-radius;
+  margin-right: 10px;
 }
 
 .top__block {
