--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -3,3 +3,10 @@
   justify-content: space-between;
   margin-bottom: 50px;
 }
+
+@media screen and (max-width: 479px) {
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+}
