--- a/src/pages/Home/components/Days/Days.module.scss
+++ b/src/pages/Home/components/Days/Days.module.scss
@@ -4,62 +4,12 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 20px;
-  margin: 0 -5px;
-  width: 100%;
+  padding: 10px;
+  // margin: 0 -5px;
+  max-width: 100%;
   background: $light-background;
   box-shadow: $box-shadow;
   border-radius: 0 0 $border-radius $border-radius;
-}
-
-.card {
-  display: flex;
-  flex: 1 1 0;
-  margin: 0 5px;
-  flex-direction: column;
-  background: $secondary-color;
-
-  border-radius: 10px;
-  padding: 10px;
-  width: 149px;
-  transition: 0.3s all;
-  cursor: pointer;
-
-  .day {
-    margin-bottom: 7px;
-    font-size: 18px;
-    // color: $light-color;
-  }
-
-  .day__info {
-    font-size: 14px;
-    margin-bottom: 12px;
-    color: $base-color;
-  }
-
-  .img {
-    margin-bottom: 12px;
-  }
-
-  .temp__day {
-    font-size: 18px;
-    // color: $light-color;
-  }
-
-  .temp__night {
-    font-size: 13px;
-    color: $base-color;
-    margin-bottom: 6px;
-  }
-
-  .info {
-    font-size: 13px;
-    color: $base-color;
-  }
-
-  &:hover {
-    box-shadow: $box-shadow;
-  }
 }
 
 .tabs {
@@ -94,4 +44,17 @@
 .link {
   color: inherit;
   text-decoration: none;
+}
+
+@media screen and (max-width: 479px) {
+  .tabs {
+    display: none;
+  }
+
+  .days {
+    display: flex;
+    justify-content: start;
+    border-radius: 10px;
+    margin: 0;
+  }
 }
