--- a/src/shared/Header/Header.module.scss
+++ b/src/shared/Header/Header.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  max-width: 100%;
   margin-bottom: 30px;
 }
 
@@ -35,4 +35,20 @@
   display: flex;
   align-items: center;
   margin-right: 40px;
+}
+
+@media screen and (max-width: 479px) {
+  .logo,
+  .title,
+  .select {
+    display: none;
+  }
+
+  .text__field {
+    margin-right: 15px;
+  }
+
+  .header {
+    display: block;
+  }
 }
